tests/ui/traits/trait-upcasting/issue-11515.next.stderr
error[E0658]: cannot cast `dyn Fn()` to `dyn FnMut()`, trait upcasting coercion is experimental
  --> $DIR/issue-11515.rs:10:38
   |
LL |     let test = Box::new(Test { func: closure });
   |                                      ^^^^^^^
   |
   = note: see issue #65991 <https://github.com/rust-lang/rust/issues/65991> for more information
   = help: add `#![feature(trait_upcasting)]` to the crate attributes to enable
   = note: required when coercing `Box<(dyn Fn() + 'static)>` into `Box<(dyn FnMut() + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
